--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "I-complex/serializer",
+    "name": "i-complex/serializer",
     "type": "library",
     "description": "Library for (de-)serializing data of any complexity; supports XML, and JSON.",
     "keywords": ["serialization", "deserialization", "json", "jaxb", "xml"],
